# autoresearch-v2

./: .gitignore  MIGRATION_PLAN.md  README.md  TURBOQUANT.md  experiment_config.py  launch.py  program.md  pyproject.toml  shared_prepare.py  train.py  train_mlx.py
.sisyphus/: ralph-loop.local.md
scripts/: dashboard.py  experiment_designer.py  knowledge_base.py  meta_analyzer.py  research_orchestrator.py  self_improve.py
src/autoresearch/: __init__.py  __main__.py  server.py
src/autoresearch/agents/: __init__.py  analyst.py  base.py  crawler.py  planner.py  search_agent.py  writer.py
src/autoresearch/cli/: main.py
src/autoresearch/core/: __init__.py  config.py  engine.py  models.py  state.py
src/autoresearch/documents/: chunker.py  parser.py
src/autoresearch/inference/: __init__.py  kv_cache.py  mlx_backend.py
src/autoresearch/scheduler/: dispatcher.py
src/autoresearch/search/: cache.py  duckduckgo.py  fetch.py
src/autoresearch/synthesis/: formatter.py  synthesizer.py  templates.py
src/autoresearch/turboquant/: __init__.py  cache.py  compressor.py  lloyd_max.py  qjl.py  rotation.py
src/autoresearch/utils/: logging.py  memory.py  timing.py
tests/: test_e2e.py  test_experiment_config.py  test_launch_parsing.py  test_multi_agent.py
